site/docs/v0.4.1/zh/components/switch.mdx
# 开关

开关立即切换一个独立设置的开启或关闭状态，不用于需要提交表单后才生效的选择。若远程更新可能失败，控件应保持可交互，播报进行中或被拒绝的结果，并在拒绝时恢复先前值。

<Preview title="飞行模式">
  <div class="grid gap-3" data-switch-primary-demo="zh">
    <div role="group" class="field" data-orientation="horizontal">
      <input type="checkbox" id="airplane-mode" role="switch" class="input" />
      <label for="airplane-mode">飞行模式</label>
    </div>
    <p data-switch-status aria-live="polite">飞行模式已关闭。</p>
  </div>
</Preview>

## 用法

<Steps>
  <Step title="引入 CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者仅导入基本 CSS、Switch 组件 CSS 和一个样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/switch.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="添加开关 HTML">

Add `class="input"` and `role="switch"` to a native checkbox. Use a native `<label>` or `aria-label` for accessible naming.

```html
<input type="checkbox" role="switch" class="input" />
```

  </Step>
</Steps>

### HTML 结构

<dl>
  <dt><code>&lt;input type="checkbox" role="switch" class="input"&gt;</code></dt>
  <dd>The switch control. Use native checkbox state: add <code>checked</code> for an initially enabled switch, <code>disabled</code> for a disabled switch, and <code>aria-invalid="true"</code> for invalid state.</dd>
  <dt><code>data-size="sm"</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>Renders the smaller switch size.</dd>
</dl>

## 示例

### 说明

<Preview class="w-full max-w-sm">
<div role="group" class="field" data-orientation="horizontal">
  <section>
    <label for="switch-focus-mode">Share across devices</label>
    <p id="switch-focus-mode-description">Focus is shared across devices, and turns off when you leave the app.</p>
  </section>
  <input type="checkbox" id="switch-focus-mode" role="switch" class="input" aria-describedby="switch-focus-mode-description" />
</div>
</Preview>

### 卡片式选项

需要点击整张卡片来切换开关时，请使用 `<label>` 包裹卡片。

<Preview class="w-full max-w-sm">
<div role="group" class="grid w-full gap-3" aria-label="Focus settings">
  <label>
    <div role="group" class="field" data-orientation="horizontal">
      <section>
        <h3>Share across devices</h3>
        <p>Focus is shared across devices, and turns off when you leave the app.</p>
      </section>
      <input type="checkbox" role="switch" class="input" />
    </div>
  </label>
  <label>
    <div role="group" class="field" data-orientation="horizontal">
      <section>
        <h3>Enable notifications</h3>
        <p>Receive notifications when focus mode changes.</p>
      </section>
      <input type="checkbox" role="switch" class="input" defaultChecked />
    </div>
  </label>
</div>
</Preview>

### 远程接受与拒绝

持久化由宿主负责。这些固定示例证明：接受时保留新值，拒绝时恢复先前值。

<Preview title="同步专注设置">
  <div class="grid gap-4">
    <div class="grid gap-3" data-switch-remote-demo="zh" data-switch-remote-outcome="reject" data-switch-value="off">
      <div role="group" class="field" data-orientation="horizontal">
        <section>
          <label for="switch-remote-reject-zh">同步专注设置（拒绝）</label>
          <p id="switch-remote-reject-zh-description">此示例始终拒绝远程更新并恢复先前值。</p>
        </section>
        <input type="checkbox" id="switch-remote-reject-zh" role="switch" class="input" aria-describedby="switch-remote-reject-zh-description"
          data-preview-onchange="const demo = document.querySelector('[data-switch-remote-demo=zh][data-switch-remote-outcome=reject]'); const status = demo.querySelector('[data-switch-status]'); const next = this.checked; this.setAttribute('aria-busy', 'true'); this.checked = !next; status.textContent = '同步被拒绝，已恢复先前设置。'; demo.setAttribute('data-switch-value', this.checked ? 'on' : 'off'); demo.setAttribute('data-switch-remote-result', 'rejected'); this.removeAttribute('aria-busy');" />
      </div>
      <p data-switch-status aria-live="polite">准备同步。</p>
    </div>
    <div class="grid gap-3" data-switch-remote-demo="zh" data-switch-remote-outcome="accept" data-switch-value="off">
      <div role="group" class="field" data-orientation="horizontal">
        <section>
          <label for="switch-remote-accept-zh">同步专注设置（接受）</label>
          <p id="switch-remote-accept-zh-description">此示例始终接受远程更新。</p>
        </section>
        <input type="checkbox" id="switch-remote-accept-zh" role="switch" class="input" aria-describedby="switch-remote-accept-zh-description"
          data-preview-onchange="const demo = document.querySelector('[data-switch-remote-demo=zh][data-switch-remote-outcome=accept]'); const status = demo.querySelector('[data-switch-status]'); const next = this.checked; this.setAttribute('aria-busy', 'true'); status.textContent = next ? '同步已接受，设置已开启。' : '同步已接受，设置已关闭。'; demo.setAttribute('data-switch-value', next ? 'on' : 'off'); demo.setAttribute('data-switch-remote-result', 'accepted'); this.removeAttribute('aria-busy');" />
      </div>
      <p data-switch-status aria-live="polite">准备同步。</p>
    </div>
  </div>
</Preview>

### 已禁用

当周围字段应使用禁用样式时，将 `disabled` 添加到开关，将 `data-disabled="true"` 添加到字段包装器。保留标签与原因可见。

<Preview>
<div role="group" class="field" data-orientation="horizontal" data-disabled="true">
  <input type="checkbox" id="switch-disabled-unchecked" role="switch" class="input" disabled />
  <section>
    <label for="switch-disabled-unchecked">已禁用</label>
    <p>仅组织所有者可以更改此设置。</p>
  </section>
</div>
</Preview>

### 无效

将 `aria-invalid="true"` 添加到开关，并将 `data-invalid="true"` 添加到字段包装器。

<Preview class="w-full max-w-sm">
<div role="group" class="field" data-orientation="horizontal" data-invalid="true">
  <section>
    <label for="switch-invalid">接受条款与条件</label>
    <p>必须接受条款与条件才能继续。</p>
  </section>
  <input type="checkbox" id="switch-invalid" role="switch" class="input" aria-invalid="true" />
</div>
</Preview>

### 尺寸

使用`data-size="sm"`渲染较小的开关尺寸。

<Preview class="w-full max-w-[10rem]">
<div role="group" class="grid w-full gap-4" aria-label="Switch sizes">
  <div role="group" class="field" data-orientation="horizontal">
    <input type="checkbox" id="switch-size-sm" role="switch" class="input" data-size="sm" />
    <label for="switch-size-sm">Small</label>
  </div>
  <div role="group" class="field" data-orientation="horizontal">
    <input type="checkbox" id="switch-size-default" role="switch" class="input" />
    <label for="switch-size-default">Default</label>
  </div>
</div>
</Preview>

## RTL

切换字段布局使用文档方向。在字段或祖先上设置 `dir="rtl"`。

<Preview class="w-full max-w-sm">
<div dir="rtl" role="group" class="field" data-orientation="horizontal">
  <section>
    <label for="switch-rtl">المشاركة عبر الأجهزة</label>
    <p id="switch-rtl-description">يتم مشاركة التركيز عبر الأجهزة، ويتم إيقاف تشغيله عند مغادرة التطبيق.</p>
  </section>
  <input type="checkbox" id="switch-rtl" role="switch" class="input" aria-describedby="switch-rtl-description" defaultChecked />
</div>
</Preview>

## React

```tsx
import { Switch, useSwitch } from "@a3s-lab/ui/react";

export function Example() {
  const control = useSwitch();
  return (
    <Switch ref={control.ref} aria-label="名称" />
  );
}
```

`useSwitch` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。

## Vue

```vue
<script setup>
import { Switch, useSwitch } from "@a3s-lab/ui/vue";

const control = useSwitch();
const componentRef = control.componentRef;
</script>

<template>
  <Switch ref="componentRef" aria-label="名称" />
</template>
```

`useSwitch` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。
